--- a/src/app/features/booking/booking.component.html
+++ b/src/app/features/booking/booking.component.html
@@ -16,7 +16,7 @@
     <div class="row">
       <div class="col-lg-10 mx-auto">
         <div class="booking-intro text-center mb-5">
-          <p>Completa el formulario a continuación para reservar tu estancia en nuestra Casa de Campo. Selecciona las fechas, el número de huéspedes y elige entre nuestras acogedoras habitaciones.</p>
+          <p>Completa el formulario a continuación para reservar tu estancia en nuestra Casa de Campo El Sosiego. Selecciona las fechas, el número de huéspedes y completa tus datos.</p>
         </div>
         
         <!-- Reserva Paso a Paso -->
