--- a/src/app/features/home/home.component.html
+++ b/src/app/features/home/home.component.html
@@ -113,18 +113,30 @@
       <p class="section-subtitle">Disfruta de todas nuestras instalaciones y servicios</p>
     </div>
     
-    <div class="row g-4">
-      <ng-container *ngFor="let amenity of amenities">
-        <div class="col-md-3 col-sm-6">
-          <div class="amenity-card text-center">
-            <div class="amenity-icon">
-              <i class="{{amenity.icon}}"></i>
-            </div>
-            <h5>{{amenity.title}}</h5>
-            <p>{{amenity.description}}</p>
+    <!-- Loading Indicator -->
+    <div *ngIf="isLoadingServices" class="text-center py-5">
+      <div class="spinner-border text-primary" role="status">
+        <span class="visually-hidden">Cargando...</span>
+      </div>
+      <p class="mt-3">Cargando servicios...</p>
+    </div>
+
+    <!-- Services Grid -->
+    <div class="row g-4" *ngIf="!isLoadingServices">
+      <div *ngFor="let service of services" class="col-md-3 col-sm-6">
+        <div class="amenity-card text-center">
+          <div class="amenity-icon">
+            <i [class]="service.icon"></i>
           </div>
+          <h5>{{service.name}}</h5>
+          <p>{{service.description}}</p>
         </div>
-      </ng-container>
+      </div>
+
+      <!-- Mensaje si no hay servicios -->
+      <div *ngIf="services.length === 0" class="col-12 text-center">
+        <p>No hay servicios disponibles en este momento.</p>
+      </div>
     </div>
     
     <div class="text-center mt-5">
